--- a/src/Views/Preferences.axaml
+++ b/src/Views/Preferences.axaml
@@ -279,7 +279,7 @@
             <TextBlock Classes="tab_header" Text="{DynamicResource Text.Preferences.Git}"/>
           </TabItem.Header>
 
-          <Grid Margin="8" RowDefinitions="32,32,32,32,32,32,32,32" ColumnDefinitions="Auto,*">
+          <Grid Margin="8" RowDefinitions="32,32,32,32,32,32,32,32,Auto" ColumnDefinitions="Auto,*">
             <TextBlock Grid.Row="0" Grid.Column="0"
                        Text="{DynamicResource Text.Preferences.Git.Path}"
                        HorizontalAlignment="Right"
@@ -366,6 +366,12 @@
                       Height="32"
                       Content="{DynamicResource Text.Preferences.Git.SSLVerify}"
                       IsChecked="{Binding #ThisControl.EnableHTTPSSLVerify, Mode=TwoWay}"/>
+
+            <CheckBox Grid.Row="8" Grid.Column="1"
+                      Height="32"
+                      Content="{DynamicResource Text.Preferences.Git.UseLibsecret}"
+                      IsChecked="{Binding UseLibsecretInsteadOfGCM, Mode=TwoWay}"
+                      IsVisible="{OnPlatform False, Linux=True}"/>
           </Grid>
         </TabItem>
 
