--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -150,8 +150,8 @@
                                       Count="{Binding LocalChangesCount}"
                                       FontFamily="{DynamicResource Fonts.Monospace}"
                                       FontSize="10"
-                                      Foreground="{DynamicResource Brush.BadgeFG}"
-                                      Background="{DynamicResource Brush.Badge}"/>
+                                      Foreground="{Binding LocalChangesCount, Converter={x:Static c:IntConverters.ToBadgeForeground}}"
+                                      Background="{Binding LocalChangesCount, Converter={x:Static c:IntConverters.ToBadgeBackground}}"/>
                   <Path Grid.Column="3"
                         Width="12" Height="12"
                         Margin="0,0,6,0"
