--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -83,7 +83,7 @@
               </ListBox.ItemsPanel>
 
               <ListBoxItem>
-                <Grid Classes="view_mode" ColumnDefinitions="Auto,*,Auto,Auto,Auto,Auto,Auto">
+                <Grid Classes="view_mode" ColumnDefinitions="Auto,*,Auto,Auto,Auto,Auto,Auto,Auto">
                   <Path Grid.Column="0" Classes="icon" Data="{StaticResource Icons.Histories}"/>
                   <TextBlock Grid.Column="1" Classes="header" Text="{DynamicResource Text.Histories}"/>
 
@@ -131,7 +131,21 @@
                                 ToolTip.Tip="{DynamicResource Text.Repository.UseRelativeTimeInGraph}">
                     <Path Width="12" Height="12" Data="{StaticResource Icons.Stopwatch}"/>
                   </ToggleButton>
-                  <Button Grid.Column="6"
+                  <ToggleButton Grid.Column="6"
+                                Classes="line_path"
+                                Width="26" Height="26"
+                                Background="Transparent"
+                                IsChecked="{Binding SimplifyByDecoration, Mode=TwoWay}">
+                      <ToolTip.Tip>
+                        <TextBlock>
+                          <Run Text="{DynamicResource Text.Repository.SimplifyByDecoration}"/>
+                          <Run Text=" "/>
+                          <Run Text="--simplify-by-decoration" FontSize="11" Foreground="{DynamicResource MenuFlyoutItemKeyboardAcceleratorTextForeground}"/>
+                        </TextBlock>
+                      </ToolTip.Tip>
+                      <Path Width="12" Height="12" Data="{StaticResource Icons.Tree}"/>
+                    </ToggleButton>
+                  <Button Grid.Column="7"
                           Classes="icon_button"
                           Width="26" Height="26"
                           Click="OnOpenAdvancedHistoriesOption">
