--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -83,7 +83,7 @@
               </ListBox.ItemsPanel>
 
               <ListBoxItem>
-                <Grid Classes="view_mode" ColumnDefinitions="Auto,*,Auto,Auto,Auto,Auto,Auto,Auto">
+                <Grid Classes="view_mode" ColumnDefinitions="Auto,*,Auto,Auto,Auto">
                   <Path Grid.Column="0" Classes="icon" Data="{StaticResource Icons.Histories}"/>
                   <TextBlock Grid.Column="1" Classes="header" Text="{DynamicResource Text.Histories}"/>
 
@@ -91,39 +91,11 @@
                                 Classes="line_path"
                                 Width="26" Height="26"
                                 Background="Transparent"
-                                IsChecked="{Binding EnableReflog, Mode=TwoWay}">
-                    <ToolTip.Tip>
-                      <TextBlock>
-                        <Run Text="{DynamicResource Text.Repository.ShowLostCommits}"/>
-                        <Run Text=" "/>
-                        <Run Text="--reflog" FontSize="11" Foreground="{DynamicResource MenuFlyoutItemKeyboardAcceleratorTextForeground}"/>
-                      </TextBlock>
-                    </ToolTip.Tip>
-                    <Path Width="12" Height="12" Data="{StaticResource Icons.Reference}"/>
-                  </ToggleButton>
-                  <ToggleButton Grid.Column="3"
-                                Classes="line_path"
-                                Width="26" Height="26"
-                                Background="Transparent"
-                                IsChecked="{Binding EnableFirstParentInHistories, Mode=TwoWay}">
-                    <ToolTip.Tip>
-                      <TextBlock>
-                        <Run Text="{DynamicResource Text.Repository.ShowFirstParentOnly}"/>
-                        <Run Text=" "/>
-                        <Run Text="--first-parent" FontSize="11" Foreground="{DynamicResource MenuFlyoutItemKeyboardAcceleratorTextForeground}"/>
-                      </TextBlock>
-                    </ToolTip.Tip>
-                    <Path Width="12" Height="12" Data="{StaticResource Icons.FirstParentFilter}"/>
-                  </ToggleButton>
-                  <ToggleButton Grid.Column="4"
-                                Classes="line_path"
-                                Width="26" Height="26"
-                                Background="Transparent"
                                 IsChecked="{Binding OnlyHighlightCurrentBranchInHistories, Mode=TwoWay}"
                                 ToolTip.Tip="{DynamicResource Text.Repository.OnlyHighlightCurrentBranchInGraph}">
                     <Path Width="12" Height="12" Data="{StaticResource Icons.LightOn}"/>
                   </ToggleButton>
-                  <ToggleButton Grid.Column="5"
+                  <ToggleButton Grid.Column="3"
                                 Classes="line_path"
                                 Width="26" Height="26"
                                 Background="Transparent"
@@ -131,21 +103,7 @@
                                 ToolTip.Tip="{DynamicResource Text.Repository.UseRelativeTimeInGraph}">
                     <Path Width="12" Height="12" Data="{StaticResource Icons.Stopwatch}"/>
                   </ToggleButton>
-                  <ToggleButton Grid.Column="6"
-                                Classes="line_path"
-                                Width="26" Height="26"
-                                Background="Transparent"
-                                IsChecked="{Binding SimplifyByDecoration, Mode=TwoWay}">
-                      <ToolTip.Tip>
-                        <TextBlock>
-                          <Run Text="{DynamicResource Text.Repository.SimplifyByDecoration}"/>
-                          <Run Text=" "/>
-                          <Run Text="--simplify-by-decoration" FontSize="11" Foreground="{DynamicResource MenuFlyoutItemKeyboardAcceleratorTextForeground}"/>
-                        </TextBlock>
-                      </ToolTip.Tip>
-                      <Path Width="12" Height="12" Data="{StaticResource Icons.Tree}"/>
-                    </ToggleButton>
-                  <Button Grid.Column="7"
+                  <Button Grid.Column="4"
                           Classes="icon_button"
                           Width="26" Height="26"
                           Click="OnOpenAdvancedHistoriesOption">
